--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>我的全新 Hugo 网站</title><meta name="Description" content="欢迎来到Levin的小屋"><meta property="og:title" content="我的全新 Hugo 网站" />
+        <title>
+	    </title><meta name="Description" content="欢迎来到Levin的小屋"><meta property="og:title" content="Levin的资源仓库" />
 <meta property="og:description" content="欢迎来到Levin的小屋" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://example.org/" /><meta property="og:site_name" content="Levin的小屋" />
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="我的全新 Hugo 网站"/>
+<meta name="twitter:title" content="Levin的资源仓库"/>
 <meta name="twitter:description" content="欢迎来到Levin的小屋"/>
 <meta name="application-name" content="欢迎来到Levin的小屋">
-<meta name="apple-mobile-web-app-title" content="欢迎来到Levin的小屋"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://i.52112.com/icon/256/20190306/31991/1575470.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://example.org/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="我的全新 Hugo 网站">
-    <link rel="feed" href="/index.xml" type="application/rss+xml" title="我的全新 Hugo 网站"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<meta name="apple-mobile-web-app-title" content="欢迎来到Levin的小屋"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://i.52112.com/icon/256/20190306/31991/1575470.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://example.org/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Levin的资源仓库">
+    <link rel="feed" href="/index.xml" type="application/rss+xml" title="Levin的资源仓库"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"></noscript><link rel="preload" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"></noscript><script type="application/ld+json">
     {
@@ -23,7 +24,7 @@
         "url": "http:\/\/example.org\/","inLanguage": "zh-CN","author": {
                 "@type": "Person",
                 "name": "Levin"
-            },"description": "欢迎来到Levin的小屋","name": "我的全新 Hugo 网站"
+            },"description": "欢迎来到Levin的小屋","name": "Levin的资源仓库"
     }
     </script></head>
     <body data-header-desktop="fixed" data-header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
@@ -31,7 +32,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="我的全新 Hugo 网站"><img
+            <a href="/" title="Levin的资源仓库"><img
         class="lazyload logo"
         src="/svg/loading.min.svg"
         data-src="https://i.52112.com/icon/256/20190306/31991/1575470.png"
@@ -50,7 +51,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="我的全新 Hugo 网站"><img
+                <a href="/" title="Levin的资源仓库"><img
         class="lazyload logo"
         src="/svg/loading.min.svg"
         data-src="https://i.52112.com/icon/256/20190306/31991/1575470.png"
