--- a/lairdmax/LoveCode/01/index.html
+++ b/lairdmax/LoveCode/01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>♥点一下屏幕</title>
+    <title>♥点一下屏幕 | 猪猪模板</title>
     <link rel="stylesheet" href="style.css"/>
 
     <style>
