--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -13,7 +13,10 @@
 <script type="text/javascript" src="../exif.js"></script>
     <script>
         "use strict";
-        window.onload=getExif;
+        
+        <input type="text" size="10" maxlength="30" value="getExif">
+
+        <input type="text" size="10" maxlength="30" value="测试文本框">
 
         function getExif() {
             var img1 = document.getElementById("img1");
