--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -11,7 +11,7 @@
     <img src="DSCN0614_small.jpg" id="img1" />
     <pre>Make and model: <span id="makeAndModel"></span></div>
     <pre>Fnumber: <span id="Fnumber"></span></div>
-    <pre>time : <span id="time" </span></div>
+    <pre>time : <span id="time"></span></span></div>
 <script type="text/javascript" src="../exif.js"></script>
     <script>
         "use strict";
