--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -10,8 +10,8 @@
 
     <img src="DSCN0614_small.jpg" id="img1" />
     <pre>Make and model: <span id="makeAndModel"></span></div>
-    <pre>Fnumber: <span id="Fnumber"></span></div>
-    <pre>time : <span id="time"></span></span></div>
+    <pre>Fnumber: <span id="testFnumber"></span></div>
+    <pre>time : <span id="testtime"></span></div>
 <script type="text/javascript" src="../exif.js"></script>
     <script>
         "use strict";
@@ -27,10 +27,11 @@
                 var model = EXIF.getTag(this, "Model");
                 var makeAndModel = document.getElementById("makeAndModel");
                 makeAndModel.innerHTML = `${make} ${model}`;
-                var Fnumber = EXIF.getTag(this,"FNumber");
-                var time = EXIF.getTag(this,"SubsecTime");
-                time.innerHTML = ${time};
-                Fnumber.innerHTML = ${Fnumber};
+                var Fnumber1 = EXIF.getTag(this,"FNumber");
+                var time1 = EXIF.getTag(this,"SubsecTime");
+                var testtime = document.getElementById(testtime)
+                testtime.innerHTML = ${time1};
+                testFnumber.innerHTML = ${Fnumber1};
 
             });
         }
