--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -16,9 +16,9 @@
     <script>
         "use strict";
         
-        <input type="text" size="10" maxlength="30" value="getExif">
+       # <input type="text" size="10" maxlength="30" value="getExif">
 
-        <input type="text" size="10" maxlength="30" value="测试文本框">
+       # <input type="text" size="10" maxlength="30" value="测试文本框">
 
         function getExif() {
             var img1 = document.getElementById("img1");
