--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img src="DSCN0614_small.jpg" id="img1" />
+    <img src="IMG_20230622_224907.jpg" id="img1" />
     <pre>Make and model: <span id="makeAndModel"></span></div>
     <pre>Fnumber: <span id="testFnumber"></span></div>
     <pre>time : <span id="testtime"></span></div>
