--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -12,9 +12,11 @@
     <pre>Make and model: <span id="makeAndModel"></span></div>
     <pre>Fnumber: <span id="testFnumber"></span></div>
     <pre>time : <span id="testtime"></span></div>
+    <br/>
 <script type="text/javascript" src="../exif.js"></script>
     <script>
         "use strict";
+        window.onload=getExif;
         
        # <input type="text" size="10" maxlength="30" value="getExif">
 
