--- a/Exif/example/test.html
+++ b/Exif/example/test.html
@@ -27,9 +27,9 @@
                 makeAndModel.innerHTML = `${make} ${model}`;
                 var Fnumber1 = EXIF.getTag(this,"FNumber");
                 var time1 = EXIF.getTag(this,"SubsecTime");
-                var testtime = document.getElementById(testtime)
-                testtime.innerHTML = ${time1};
-                testFnumber.innerHTML = ${Fnumber1};
+                var testtime = document.getElementById("testtime");
+                testtime.innerHTML = `${time1}`;
+                testFnumber.innerHTML = `${Fnumber1}`;
 
             });
         }
