--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -8,6 +8,6 @@
 
     <div id="image-gallery"></div>
 
-    <script src="your-script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
