--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -8,6 +8,7 @@
 
     <div id="image-gallery"></div>
 
+    <script src="exif.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
