--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Photo Gallery</title>
-  </head>
-  <body>
-    <h1>Photo Gallery</h1>
-
-    <div id="image-gallery"></div>
-
-    <script src="exif.js"></script>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <title>Photo Gallery</title>
+</head>
+<body>
+  <h1>Photo</h1>
+  <div id="image-gallery"></div>
+  <script src="exif.js"></script>
+  <script src="your-script.js"></script>
+</body>
 </html>
