--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -4,9 +4,9 @@
   <title>Photo Gallery</title>
 </head>
 <body>
-  <h1>Photo</h1>
+  <h1>Photo1111</h1>
   <div id="image-gallery"></div>
   <script src="exif.js"></script>
-  <script src="your-script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
