--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -7,6 +7,6 @@
   <h1>Photo Gallery</h1>
   <div id="image-gallery"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
-  <script src="your-script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
