--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -2,6 +2,17 @@
 <html>
 <head>
   <title>Photo Gallery</title>
+  <style>
+    .image-container {
+      display: inline-block;
+      margin: 10px;
+      text-align: center;
+    }
+    .image-container img {
+      max-width: 300px;
+      max-height: 300px;
+    }
+  </style>
 </head>
 <body>
   <h1>Photo Gallery</h1>
