--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -1,23 +1,187 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Photo Gallery</title>
-  <style>
-    .image-container {
-      display: inline-block;
-      margin: 10px;
-      text-align: center;
-    }
-    .image-container img {
-      max-width: 300px;
-      max-height: 300px;
-    }
-  </style>
+    <title>显示图片</title>
+    <style>
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .gallery img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px;
+        }
+
+        .image-details {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 14px;
+        }
+
+        .image-details p {
+            margin: 5px 0;
+        }
+
+        .exif-info {
+            font-size: 12px;
+            color: #999;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .exif-info.show {
+            opacity: 1;
+        }
+    </style>
 </head>
 <body>
-  <h1>Photo Gallery</h1>
-  <div id="image-gallery"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
-  <script src="script.js"></script>
+    <h1>显示图片</h1>
+
+    <div class="gallery"></div>
+
+    <script src="exif.js"></script>
+    <script>
+        var imageFolder = 'images/';
+        var imagesPerLoad = 20;
+        var scrollThreshold = 200;
+        var startIndex = 0;
+
+        function loadImage(imageIndex) {
+            return new Promise(function(resolve, reject) {
+                var img = new Image();
+                img.onload = function() {
+                    resolve(img);
+                };
+                img.onerror = function() {
+                    reject();
+                };
+                img.src = imageFolder + 'image' + imageIndex + '.jpg';
+            });
+        }
+
+        function loadImages(start, count) {
+            var gallery = document.querySelector('.gallery');
+
+            var loadPromises = [];
+            for (var i = start; i < start + count; i++) {
+                var imageIndex = i;
+
+                var loadPromise = loadImage(imageIndex).then(function(img) {
+                    // 创建图片元素
+                    var image = document.createElement('img');
+                    image.src = img.src;
+                    image.alt = 'Image ' + imageIndex;
+
+                    // 创建图片信息元素
+                    var imageDetails = document.createElement('div');
+                    imageDetails.className = 'image-details';
+
+                    // 创建包含图片的容器
+                    var container = document.createElement('div');
+                    container.appendChild(image);
+                    container.appendChild(imageDetails);
+
+                    // 将容器添加到画廊中
+                    gallery.appendChild(container);
+
+                    // 获取并显示图片的EXIF信息
+                    getExifInformation(img, imageDetails);
+                }).catch(function() {
+                    console.log('Image not found: ' + imageIndex);
+                });
+
+                loadPromises.push(loadPromise);
+            }
+
+            Promise.all(loadPromises).then(function() {
+                // 所有图片加载完成
+                sortImagesByExifDateTime();
+            });
+        }
+
+        function getExifInformation(image, element) {
+            // 使用exif.js获取图片的Exif信息
+            EXIF.getData(image, function() {
+                var dateTimeOriginal = EXIF.getTag(this, 'DateTimeOriginal');
+                var make = EXIF.getTag(this, 'Make');
+                var model = EXIF.getTag(this, 'Model');
+                var location = EXIF.getTag(this, 'GPSLatitude') + ', ' + EXIF.getTag(this, 'GPSLongitude');
+
+                // 创建包含EXIF信息的元素
+                var exifInfo = document.createElement('div');
+                exifInfo.className = 'exif-info';
+
+                if (dateTimeOriginal) {
+                    var dateTimeParagraph = document.createElement('p');
+                    dateTimeParagraph.textContent = '拍摄时间: ' + dateTimeOriginal;
+                    exifInfo.appendChild(dateTimeParagraph);
+                }
+
+                if (make && model) {
+                    var deviceParagraph = document.createElement('p');
+                    deviceParagraph.textContent = '拍摄设备: ' + make + ' ' + model;
+                    exifInfo.appendChild(deviceParagraph);
+                }
+
+                if (location) {
+                    var locationParagraph = document.createElement('p');
+                    locationParagraph.textContent = '拍摄地点: ' + location;
+                    exifInfo.appendChild(locationParagraph);
+                }
+
+                // 将元素添加到容器中
+                element.appendChild(exifInfo);
+
+                // 添加动画类名以触发动画效果
+                setTimeout(function() {
+                    exifInfo.classList.add('show');
+                }, 100);
+            });
+        }
+
+        function sortImagesByExifDateTime() {
+            var gallery = document.querySelector('.gallery');
+            var imageContainers = Array.from(gallery.children);
+
+            imageContainers.sort(function(a, b) {
+                var exifInfoA = a.querySelector('.exif-info');
+                var exifInfoB = b.querySelector('.exif-info');
+
+                if (exifInfoA && exifInfoB) {
+                    var dateTimeA = exifInfoA.querySelector('p:nth-child(1)').textContent.replace('拍摄时间: ', '');
+                    var dateTimeB = exifInfoB.querySelector('p:nth-child(1)').textContent.replace('拍摄时间: ', '');
+
+                    if (dateTimeA > dateTimeB) {
+                        return -1;
+                    } else if (dateTimeA < dateTimeB) {
+                        return 1;
+                    }
+                }
+
+                return 0;
+            });
+
+            imageContainers.forEach(function(container) {
+                gallery.appendChild(container);
+            });
+        }
+
+        function checkScroll() {
+            if ((window.innerHeight + window.pageYOffset) >= (document.body.offsetHeight - scrollThreshold)) {
+                loadImages(startIndex, 10);
+                startIndex += 10;
+            }
+        }
+
+        window.onload = function() {
+            loadImages(startIndex, imagesPerLoad);
+            startIndex += imagesPerLoad;
+
+            window.addEventListener('scroll', checkScroll);
+        };
+    </script>
 </body>
 </html>
