--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -28,6 +28,8 @@
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: box-shadow 0.3s ease;
+            border-radius: 4px;
+            overflow: hidden;
         }
 
         .image-container:hover {
@@ -36,8 +38,9 @@
 
         .image-container img {
             display: block;
-            max-width: 100%;
+            width: 100%;
             height: auto;
+            object-fit: cover;
         }
 
         .exif-info {
@@ -45,14 +48,8 @@
             font-size: 14px;
             color: #999;
             text-align: left;
-            opacity: 0;
-            transform: translateY(10px);
-            transition: opacity 0.3s ease, transform 0.3s ease;
-        }
-
-        .image-container:hover .exif-info {
-            opacity: 1;
-            transform: translateY(0);
+            background-color: #f5f5f5;
+            border-top: 1px solid #ddd;
         }
 
         .exif-info p {
@@ -61,10 +58,6 @@
 
         .exif-info p .label {
             font-weight: bold;
-        }
-
-        .location-info {
-            margin-top: 10px;
         }
     </style>
 </head>
@@ -149,7 +142,7 @@
 
                 if (shutterSpeed) {
                     var shutterSpeedParagraph = document.createElement('p');
-                    shutterSpeedParagraph.innerHTML = '<span class="label">快门速度:</span> ' + shutterSpeed + 's';
+                    shutterSpeedParagraph.innerHTML = '<span class="label">快门速度:</span> ' + shutterSpeed;
                     exifInfo.appendChild(shutterSpeedParagraph);
                 }
 
