--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -46,7 +46,7 @@
         .exif-info {
             padding: 10px;
             font-size: 14px;
-            color: #999;
+            color: #666;
             text-align: left;
             background-color: #f5f5f5;
             border-top: 1px solid #ddd;
@@ -54,14 +54,21 @@
 
         .exif-info p {
             margin: 5px 0;
+            display: flex;
+            align-items: center;
         }
 
         .exif-info p .label {
             font-weight: bold;
+            width: 100px;
         }
 
         .exif-info p .value {
-            font-weight: normal;
+            margin-left: 10px;
+        }
+
+        .exif-info p .icon {
+            margin-right: 5px;
         }
 
         .exif-info p .coordinates {
@@ -90,7 +97,7 @@
                 img.onerror = function() {
                     reject();
                 };
-                img.src = imageFolder + 'image' + imageIndex + '.jpg';
+                img.src = imageFolder + 'IMG_' + imageIndex + '.jpg';
             });
         }
 
@@ -115,11 +122,10 @@
                     // 获取并显示图片的EXIF信息
                     getExifInformation(img, imageContainer);
 
-                    // 将容器添加到画廊中
+                    // 添加图片容器到画廊
                     gallery.appendChild(imageContainer);
-                }).catch(function() {
-                    console.log('Image not found: ' + imageIndex);
                 });
+
                 loadPromises.push(loadPromise);
             }
 
@@ -146,37 +152,37 @@
 
                 if (dateTime) {
                     var dateTimeParagraph = document.createElement('p');
-                    dateTimeParagraph.innerHTML = '<span class="label">拍摄时间:</span> ' + formatDateTime(dateTime);
+                    dateTimeParagraph.innerHTML = '<span class="icon">📅</span><span class="label">拍摄时间:</span> ' + formatDateTime(dateTime);
                     exifInfo.appendChild(dateTimeParagraph);
                 }
 
                 if (aperture) {
                     var apertureParagraph = document.createElement('p');
-                    apertureParagraph.innerHTML = '<span class="label">光圈:</span> f/' + aperture.toFixed(2);
+                    apertureParagraph.innerHTML = '<span class="icon">🔍</span><span class="label">光圈:</span> f/' + aperture.toFixed(2);
                     exifInfo.appendChild(apertureParagraph);
                 }
 
                 if (shutterSpeed) {
                     var shutterSpeedParagraph = document.createElement('p');
-                    shutterSpeedParagraph.innerHTML = '<span class="label">快门速度:</span> ' + shutterSpeed;
+                    shutterSpeedParagraph.innerHTML = '<span class="icon">⏱️</span><span class="label">快门速度:</span> ' + shutterSpeed;
                     exifInfo.appendChild(shutterSpeedParagraph);
                 }
 
                 if (focalLength) {
                     var focalLengthParagraph = document.createElement('p');
-                    focalLengthParagraph.innerHTML = '<span class="label">焦距:</span> ' + focalLength.toFixed(2) + 'mm';
+                    focalLengthParagraph.innerHTML = '<span class="icon">🔭</span><span class="label">焦距:</span> ' + focalLength.toFixed(2) + 'mm';
                     exifInfo.appendChild(focalLengthParagraph);
                 }
 
                 if (make && model) {
                     var cameraInfoParagraph = document.createElement('p');
-                    cameraInfoParagraph.innerHTML = '<span class="label">相机:</span> ' + make + ' ' + model;
+                    cameraInfoParagraph.innerHTML = '<span class="icon">📷</span><span class="label">相机:</span> ' + make + ' ' + model;
                     exifInfo.appendChild(cameraInfoParagraph);
                 }
 
                 if (latitude && longitude) {
                     var coordinatesParagraph = document.createElement('p');
-                    coordinatesParagraph.innerHTML = '<span class="label">经纬度:</span> ' + formatCoordinates(latitude, longitude);
+                    coordinatesParagraph.innerHTML = '<span class="icon">🌍</span><span class="label">经纬度:</span> ' + formatCoordinates(latitude, longitude);
                     exifInfo.appendChild(coordinatesParagraph);
                 }
 
@@ -205,18 +211,16 @@
             var imageContainers = Array.from(gallery.children);
 
             imageContainers.sort(function(a, b) {
-                var exifInfoA = a.querySelector('.exif-info');
-                var exifInfoB = b.querySelector('.exif-info');
+                var exifDateTimeA = a.querySelector('.exif-info .datetime').textContent;
+                var exifDateTimeB = b.querySelector('.exif-info .datetime').textContent;
 
-                if (exifInfoA && exifInfoB) {
-                    var dateTimeA = exifInfoA.querySelector('p:nth-child(1)').textContent.replace('拍摄时间: ', '');
-                    var dateTimeB = exifInfoB.querySelector('p:nth-child(1)').textContent.replace('拍摄时间: ', '');
+                var dateTimeA = new Date(exifDateTimeA);
+                var dateTimeB = new Date(exifDateTimeB);
 
-                    if (dateTimeA > dateTimeB) {
-                        return -1;
-                    } else if (dateTimeA < dateTimeB) {
-                        return 1;
-                    }
+                if (dateTimeA > dateTimeB) {
+                    return -1;
+                } else if (dateTimeA < dateTimeB) {
+                    return 1;
                 }
 
                 return 0;
