--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -116,10 +116,11 @@
                     // 创建图片元素
                     var image = document.createElement('img');
                     image.src = img.src;
-                    image.alt = 'Image ' + imageIndex;
+
+                    // 添加图片到容器
                     imageContainer.appendChild(image);
 
-                    // 获取并显示图片的EXIF信息
+                    // 获取EXIF信息并添加到容器
                     getExifInformation(img, imageContainer);
 
                     // 添加图片容器到画廊
@@ -152,37 +153,37 @@
 
                 if (dateTime) {
                     var dateTimeParagraph = document.createElement('p');
-                    dateTimeParagraph.innerHTML = '<span class="icon">📅</span><span class="label">拍摄时间:</span> ' + formatDateTime(dateTime);
+                    dateTimeParagraph.innerHTML = '<span class="icon">📅</span><span class="label">拍摄时间:</span> <span class="value">' + formatDateTime(dateTime) + '</span>';
                     exifInfo.appendChild(dateTimeParagraph);
                 }
 
                 if (aperture) {
                     var apertureParagraph = document.createElement('p');
-                    apertureParagraph.innerHTML = '<span class="icon">🔍</span><span class="label">光圈:</span> f/' + aperture.toFixed(2);
+                    apertureParagraph.innerHTML = '<span class="icon">🔍</span><span class="label">光圈:</span> <span class="value">' + aperture.toFixed(2) + '</span>';
                     exifInfo.appendChild(apertureParagraph);
                 }
 
                 if (shutterSpeed) {
                     var shutterSpeedParagraph = document.createElement('p');
-                    shutterSpeedParagraph.innerHTML = '<span class="icon">⏱️</span><span class="label">快门速度:</span> ' + shutterSpeed;
+                    shutterSpeedParagraph.innerHTML = '<span class="icon">⏱️</span><span class="label">快门速度:</span> <span class="value">' + shutterSpeed + '</span>';
                     exifInfo.appendChild(shutterSpeedParagraph);
                 }
 
                 if (focalLength) {
                     var focalLengthParagraph = document.createElement('p');
-                    focalLengthParagraph.innerHTML = '<span class="icon">🔭</span><span class="label">焦距:</span> ' + focalLength.toFixed(2) + 'mm';
+                    focalLengthParagraph.innerHTML = '<span class="icon">🔭</span><span class="label">焦距:</span> <span class="value">' + focalLength.toFixed(2) + 'mm</span>';
                     exifInfo.appendChild(focalLengthParagraph);
                 }
 
                 if (make && model) {
                     var cameraInfoParagraph = document.createElement('p');
-                    cameraInfoParagraph.innerHTML = '<span class="icon">📷</span><span class="label">相机:</span> ' + make + ' ' + model;
+                    cameraInfoParagraph.innerHTML = '<span class="icon">📷</span><span class="label">相机:</span> <span class="value">' + make + ' ' + model + '</span>';
                     exifInfo.appendChild(cameraInfoParagraph);
                 }
 
                 if (latitude && longitude) {
                     var coordinatesParagraph = document.createElement('p');
-                    coordinatesParagraph.innerHTML = '<span class="icon">🌍</span><span class="label">经纬度:</span> ' + formatCoordinates(latitude, longitude);
+                    coordinatesParagraph.innerHTML = '<span class="icon">🌍</span><span class="label">经纬度:</span> <span class="coordinates">' + latitude.toFixed(6) + ', ' + longitude.toFixed(6) + '</span>';
                     exifInfo.appendChild(coordinatesParagraph);
                 }
 
@@ -192,23 +193,20 @@
 
         function formatDateTime(dateTime) {
             var date = new Date(dateTime);
-            return date.toLocaleString('en-US', {
+            var options = {
                 year: 'numeric',
                 month: 'long',
                 day: 'numeric',
                 hour: 'numeric',
                 minute: 'numeric',
                 second: 'numeric'
-            });
-        }
-
-        function formatCoordinates(latitude, longitude) {
-            return latitude.toFixed(6) + ', ' + longitude.toFixed(6);
+            };
+            return date.toLocaleString('en-US', options);
         }
 
         function sortImagesByExifDateTime() {
             var gallery = document.querySelector('.gallery');
-            var imageContainers = Array.from(gallery.children);
+            var imageContainers = Array.from(gallery.querySelectorAll('.image-container'));
 
             imageContainers.sort(function(a, b) {
                 var exifDateTimeA = a.querySelector('.exif-info .datetime').textContent;
